# family-tree-kuzu

./: .coverage  .dockerignore  .gitignore  BACKEND_TESTS_SUMMARY.md  DEAD_CODE_CLEANUP.md  Dockerfile  IMPORT_EXPORT_TESTS_GUIDE.md  PHASE2_TEST_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PHASE_2_TEST_COMPLETION.md  PHASE_3_TEST_COMPLETION.md  PHASE_4_TEST_COMPLETION.md  README  SEARCH_DEBUG.md  SEARCH_FIX_TEST.md  TESTING.md  TEST_COVERAGE_ASSESSMENT.md  TEST_IMPLEMENTATION_COMPLETE.md  TEST_IMPLEMENTATION_FINAL.md  TEST_IMPLEMENTATION_SUMMARY.md  TOOLBAR_IMPLEMENTATION.md  TOOLBAR_QUICK_TEST.md  TOOLBAR_TESTING_CHECKLIST.md  TOOLBAR_VISUAL_GUIDE.md  UX_IMPROVEMENT_PLAN.md  check_duplicates.py  docker-compose.yml  family_tree.sql  family_tree_export.json  graph_data  graph_data.wal  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  render.yaml  requirements.txt  startup.sh  test_dedup.txt
.github/: copilot-instructions.md
app/: auth.py  changelog.py  crud.py  db.py  graph.py  groups.py  importer.py  main.py  models.py  schemas.py  sharing.py  trees.py
coverage/: app.js.html  index.html  lcov.info
data/: Adi Baro Family.txt  Desta Family.txt  Geza Gebsu Harien sub tree.txt  Geza Gebsu Harien.txt  Geza Shilen Adi Nebri.txt  Sidra Adi Nebri.txt  Sidra Araya.txt  Sidra Letegiorghis.txt  Tekle.txt  Test Multi Parent.txt  Weledo Belew and Kelew.txt  Weledo Blata Tekle with Letegiorghis.txt  Weledo Blata Tekle.txt  Weledo Tekie Bekit.txt  Zaid Aklilu Family.txt  ZaidAkliluFamily.txt  desta_gpt_input.csv  gergsh.txt  gezaweldeamlak.txt  (+3 more)
(+79 files in other folders)
