[project]
name = "family-tree"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "kuzu>=0.11",
  "pydantic>=2.0",
  "python-multipart>=0.0.6",
  "bcrypt>=4.0"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["app*"]
